--- a/style/features.css
+++ b/style/features.css
@@ -39,6 +39,9 @@
 	background: linear-gradient(to top, rgba(17, 17, 17, 0.4) 0%, rgba(51, 51, 51, 0.4) 100%);
 	border-radius: 4px;
 }
+.dlyBoxDashboard:hover {
+	background: linear-gradient(to bottom, rgba(17, 17, 17, 0.4) 0%, rgba(51, 51, 51, 0.4) 100%);
+}
 .dlyCurrent {
 	padding-top: 8px;
 	padding-bottom: 8px;
