--- a/style/mobile.css
+++ b/style/mobile.css
@@ -128,7 +128,7 @@ body, html, .panelMain, #windowMain, #paneContent article {
 }
 .chnCategoryName {
 	font-size: 22px;
-	color: #666;
+	color: #bbb;
 }
 #chnToggle {
 	top: 32px;
