--- a/style/overlay.css
+++ b/style/overlay.css
@@ -101,7 +101,7 @@ input.mapCoordinatesName {
 	z-index: 9;
 	margin-left: 8px;
 	font-size: 14px;
-	font-family: Menomonia;
+	font-family: Trebuchet MS, Menomonia;
 	font-size: 16px;
 	color: white;
 	text-shadow:
