Sale update, account db update

--- a/style/account.css
+++ b/style/account.css
@@ -44,6 +44,9 @@
 	display: none;
 	width: 100%; height: 100%;
 }
+.accDish { /* Overrides composition's style '*/
+	background: linear-gradient(to right, #111 0%, #333 100%);
+}
 #accContent .cntComposition {
 	padding-left: 0;
 	padding-right: 0;
