--- a/gw2t.css
+++ b/gw2t.css
@@ -898,12 +898,8 @@ textarea.jsCopyCode {
 .mapPaneBackground {
 	background: url("img/background/space.jpg") repeat center;
 }
-.mapVignette {
-	width: 100%; height: 100%;
-	position: absolute; z-index: 9;
-	top: 0;
-	box-shadow: inset 0px 0px 16px 4px rgba(0, 0, 0, 0.9);
-	pointer-events: none;
+#itemVignette {
+	display: none;
 }
 #wvwPane {
 	display: none;
