--- a/style/features.css
+++ b/style/features.css
@@ -93,13 +93,15 @@
 	width: 80px; height: 64px;
 	margin-top: 12px;
 	margin-left: 230px;
-	border-top: 16px solid #3e75bc;
-	border-radius: 8px;
 	font-family: sans-serif;
 	line-height: 100%;
 	text-align: center;
 	color: #3b83f3;
 	background: #333;
+	border-top: 16px solid #3e75bc;
+	border-right: 4px solid #666;
+	border-bottom: 2px solid #555;
+	border-radius: 8px;
 }
 .dlyMonthdayNumber, .dlyBossIconContainer {
 	background: transparent;
