--- a/style/features.css
+++ b/style/features.css
@@ -383,7 +383,7 @@ dt.jpzListNameHover {
 .clt_bloodstonecreatures { background-position: -128px 0; }
 .clt_bloodstoneslivers { background-position: -160px 0; }
 .clt_buriedchests { background-position: -192px 0; }
-.clt_camitablets { background-position: -224px 0; }
+.clt_camijournals { background-position: -224px 0; }
 .clt_cleaningup { background-position: -256px 0; }
 .clt_coinchallenger { background-position: -288px 0; }
 .clt_coinprospect { background-position: -320px 0; }
@@ -395,20 +395,22 @@ dt.jpzListNameHover {
 .clt_goldenlostbadges { background-position: -512px 0; }
 .clt_herochallenge { background-position: -544px 0; }
 .clt_historybuff { background-position: -576px 0; }
-.clt_itzeltotems { background-position: -608px 0; }
-.clt_lionsarchexterminator { background-position: -640px 0; }
-.clt_lostbadges { background-position: -672px 0; }
-.clt_masteryinsight { background-position: -704px 0; }
-.clt_matrixcubekey { background-position: -736px 0; }
-.clt_mursaattokens { background-position: -768px 0; }
-.clt_noxiouspods { background-position: -800px 0; }
-.clt_paperscraps { background-position: -832px 0; }
-.clt_prioryseals { background-position: -864px 0; }
-.clt_rangerpets { background-position: -896px 0; }
-.clt_skrittburglar { background-position: -928px 0; }
-.clt_speedyreader { background-position: -960px 0; }
-.clt_strongboxes { background-position: -992px 0; }
-.clt_tigerspirit { background-position: -1024px 0; }
+.clt_hungrycats { background-position: -608px 0; }
+.clt_itzeltotems { background-position: -640px 0; }
+.clt_lionsarchexterminator { background-position: -672px 0; }
+.clt_lostbadges { background-position: -704px 0; }
+.clt_masteryinsight { background-position: -736px 0; }
+.clt_matrixcubekey { background-position: -768px 0; }
+.clt_mursaattablets { background-position: -800px 0; }
+.clt_mursaattokens { background-position: -832px 0; }
+.clt_noxiouspods { background-position: -864px 0; }
+.clt_paperscraps { background-position: -896px 0; }
+.clt_prioryseals { background-position: -928px 0; }
+.clt_rangerpets { background-position: -960px 0; }
+.clt_skrittburglar { background-position: -992px 0; }
+.clt_speedyreader { background-position: -1024px 0; }
+.clt_strongboxes { background-position: -1056px 0; }
+.clt_tigerspirit { background-position: -1088px 0; }
 
 .mapNeedle0, .mapNeedle1, .mapNeedle2 {
 	border-radius: 50%;
