--- a/gw2t.css
+++ b/gw2t.css
@@ -1750,10 +1750,15 @@ input.mapCoordinatesName {
 }
 
 #paneClockBackground { /* Festival sensitive */
+	/*background: url("img/background/globe_halloween.png") no-repeat center;*/
 	/*background: url("img/background/globe_wintersday.png") no-repeat center;*/
 	background: url("img/background/globe.jpg") no-repeat center;
 	filter: blur(1px);
 	opacity: 0;
+}
+#paneClockFace {
+	background: url("img/background/face.png") no-repeat center;
+	opacity: 1;
 }
 
 .iconHC {
@@ -1826,6 +1831,7 @@ input.mapCoordinatesName {
 }
 .cssWaypoint { /* Festival sensitive */
 	width: 24px; height: 24px;
+	/*background: url("img/map/halloween.png");*/
 	/*background: url("img/map/wintersday.png");*/
 	background: url("img/map/waypoint.png");
 	background-size: 24px 24px;
