--- a/gw2t.css
+++ b/gw2t.css
@@ -1758,6 +1758,7 @@ input.mapCoordinatesName {
 }
 #paneClockFace {
 	background: url("img/background/face.png") no-repeat center;
+	background-size: 100% 100%;
 	opacity: 1;
 }
 
