--- a/gw2t.css
+++ b/gw2t.css
@@ -1283,13 +1283,14 @@ textarea.jsCopyCode {
 #dsbStory {
 	display: none;
 	width: auto; max-height: 124px;
+	margin-top: 4px;
+	border-top: 1px solid #dd9900;
+	background: rgba(229, 158, 36, 0.1);
 	border-bottom: 1px solid #dd9900;
 }
 #dsbStoryTitle {
 	display: block;
 	width: 100%;
-	margin-top: 4px;
-	border-top: 1px solid #dd9900;
 	text-align: center;
 	font-size: 18px;
 	font-weight: bold;
@@ -1354,6 +1355,8 @@ input.mapCoordinatesName {
 	width: auto; /* Should be just wide enough to fit the HUD buttons */
 	text-align: right;
 	visibility: hidden;
+	opacity: 1;
+	transition: opacity 0.4s;
 }
 .hudPeripheral div {
 	text-align: left;
@@ -1372,6 +1375,10 @@ input.mapCoordinatesName {
 .hudPeripheralSouth {
 	position: absolute; z-index: 10;
 	bottom: 4px; right: 12px;
+}
+.hudPeripheralSleep {
+	opacity: 0;
+	transition: opacity 0.4s;
 }
 #itemLogo {
 	margin-right: 2px;
@@ -1750,9 +1757,9 @@ input.mapCoordinatesName {
 }
 
 #paneClockBackground { /* Festival sensitive */
-	/*background: url("img/background/globe_halloween.png") no-repeat center;*/
+	background: url("img/background/globe_halloween.png") no-repeat center;
 	/*background: url("img/background/globe_wintersday.png") no-repeat center;*/
-	background: url("img/background/globe.jpg") no-repeat center;
+	/*background: url("img/background/globe.jpg") no-repeat center;*/
 	filter: blur(1px);
 	opacity: 0;
 }
