--- a/gw2t.css
+++ b/gw2t.css
@@ -1755,14 +1755,14 @@ input.mapCoordinatesName {
 }
 
 #clkWaypoints .cssWaypoint { /* Festival sensitive */
-	background-image: url("img/map/halloween.png");
+	/*background-image: url("img/map/halloween.png");*/
 	/*background-image: url("img/map/wintersday.png");*/
 }
 #paneClockBackground { /* Festival sensitive */
-	background: url("img/background/globe_halloween.png") no-repeat center;
+	/*background: url("img/background/globe_halloween.png") no-repeat center;*/
 	/*background: url("img/background/globe_wintersday.png") no-repeat center;*/
-	/*background: url("img/background/globe.jpg") no-repeat center;*/
-	/*filter: blur(1px);*/
+	background: url("img/background/globe.jpg") no-repeat center;
+	filter: blur(1px);
 	opacity: 0;
 }
 #paneClockFace {
