Item database rebuild

--- a/style/features.css
+++ b/style/features.css
@@ -276,6 +276,9 @@ dt.jpzListNameHover {
 /* =============================================================================
  *  Resource Nodes
  * ========================================================================== */
+#nodMenu {
+	white-space: nowrap;
+}
 .nodList {
 	font-size: 11px;
 }
