--- a/style/features.css
+++ b/style/features.css
@@ -21,6 +21,13 @@
 	white-space: nowrap;
 }
 
+.dlyBookmarks {
+	display: block;
+	margin: auto;
+	margin-top: 4px;
+	margin-bottom: 8px;
+}
+
 .dlyBox { /* A day */
 	display: block;
 	position: relative;
@@ -36,7 +43,7 @@
 .dlyBoxDashboard {
 	display: inline-block;
 	width: 45%;
-	margin: 8px 8px 0px 8px;
+	margin: 0px 8px 0px 8px;
 	vertical-align: middle;
 	background: linear-gradient(to top, rgba(17, 17, 17, 0.4) 0%, rgba(51, 51, 51, 0.4) 100%);
 }
