Item museum, database update

--- a/style/account.css
+++ b/style/account.css
@@ -839,6 +839,7 @@ a.chrWalletLink {
 .acc_wallet_30 { background-position: -832px 0; }
 .acc_wallet_31 { background-position: -864px 0; }
 .acc_wallet_32 { background-position: -896px 0; }
+.acc_wallet_33 { background-position: -928px 0; }
 
 .eqpCharSeparator {
 	margin-top: 32px;
