--- a/gw2t.css
+++ b/gw2t.css
@@ -2996,32 +2996,34 @@ gem {
 .s16_league { background-position: -448px 0; }
 .s16_proof { background-position: -464px 0; }
 .s16_magic { background-position: -480px 0; }
+.s16_glory { background-position: -496px 0; }
 /* End of currencies sprites */
-.s16_achievement { background-position: -496px 0; }
-.s16_bauble { background-position: -512px 0; }
-.s16_blood { background-position: -528px 0; }
-.s16_blticket { background-position: -544px 0; }
-.s16_bubble { background-position: -560px 0; }
-.s16_bullet { background-position: -576px 0; }
-.s16_cob { background-position: -592px 0; }
-.s16_craft { background-position: -608px 0; }
-.s16_crystalline { background-position: -624px 0; }
-.s16_dragonite { background-position: -640px 0; }
-.s16_ecto { background-position: -656px 0; }
-.s16_info { background-position: -672px 0; }
-.s16_language { background-position: -688px 0; }
-.s16_loot { background-position: -752px 0; }
-.s16_money { background-position: -768px 0; }
-.s16_monument { background-position: -784px 0; }
-.s16_mysticcoin { background-position: -800px 0; }
-.s16_petrified { background-position: -816px 0; }
-.s16_pvp { background-position: -832px 0; }
-.s16_starting { background-position: -848px 0; }
-.s16_token { background-position: -864px 0; }
-.s16_view { background-position: -880px 0; }
-.s16_wiki { background-position: -896px 0; }
-.s16_winterberry { background-position: -912px 0; }
-.s16_youtube { background-position: -928px 0; }
+.s16_achievement { background-position: -512px 0; }
+.s16_bauble { background-position: -528px 0; }
+.s16_blood { background-position: -544px 0; }
+.s16_blticket { background-position: -560px 0; }
+.s16_bubble { background-position: -576px 0; }
+.s16_bullet { background-position: -592px 0; }
+.s16_cob { background-position: -608px 0; }
+.s16_craft { background-position: -624px 0; }
+.s16_crystalline { background-position: -640px 0; }
+.s16_dragonite { background-position: -656px 0; }
+.s16_ecto { background-position: -672px 0; }
+.s16_info { background-position: -688px 0; }
+.s16_language { background-position: -704px 0; }
+.s16_loot { background-position: -768px 0; }
+.s16_matrix { background-position: -784px 0; }
+.s16_money { background-position: -800px 0; }
+.s16_monument { background-position: -816px 0; }
+.s16_mysticcoin { background-position: -832px 0; }
+.s16_petrified { background-position: -848px 0; }
+.s16_pvp { background-position: -864px 0; }
+.s16_starting { background-position: -880px 0; }
+.s16_token { background-position: -896px 0; }
+.s16_view { background-position: -912px 0; }
+.s16_wiki { background-position: -928px 0; }
+.s16_winterberry { background-position: -944px 0; }
+.s16_youtube { background-position: -960px 0; }
 
 coppercoin, silvercoin, goldcoin, gemunit, karmaunit, laurelunit {
 	display: inline-block;
