--- a/style/overlay.css
+++ b/style/overlay.css
@@ -16,7 +16,7 @@
 	position: fixed; z-index: 100;
 	top: calc(50% - 16px);
 	width: 32px; height: 32px;
-	background: url("../img/ui/projection.png"), radial-gradient(ellipse at center, rgba(255, 255, 255, 0.5) 0%, transparent 100%);
+	background: url("../img/ui/pages/map.png"), radial-gradient(ellipse at center, rgba(255, 255, 255, 0.5) 0%, transparent 100%);
 	border-radius: 50%;
 	opacity: 0.8;
 }
