--- a/style/features.css
+++ b/style/features.css
@@ -368,11 +368,10 @@ dt.jpzListNameHover {
 	background: linear-gradient(to right, #7c7253 0%, transparent 100%);
 	border-radius: 4px;
 }
-#cltList ins {
+.cltIcon {
 	width: 32px; height: 32px;
 	margin-right: 4px;
 	border-radius: 8px;
-	background-image: url("../img/collectible/collectibles.png");
 }
 .cltBox a {
 	text-decoration: underline;
@@ -393,47 +392,6 @@ dt.jpzListNameHover {
 .cltSublist { /* A list for a special collectible type */
 	display: none;
 }
-
-.clt_story { background-position: 0 0; }
-.clt_airshipcargo { background-position: -32px 0; }
-.clt_aurictablets { background-position: -64px 0; }
-.clt_banditchests { background-position: -96px 0; }
-.clt_bloodstonecreatures { background-position: -128px 0; }
-.clt_bloodstoneslivers { background-position: -160px 0; }
-.clt_buriedchests { background-position: -192px 0; }
-.clt_camijournals { background-position: -224px 0; }
-.clt_cleaningup { background-position: -256px 0; }
-.clt_coinchallenger { background-position: -288px 0; }
-.clt_coinprospect { background-position: -320px 0; }
-.clt_coinuplands { background-position: -352px 0; }
-.clt_crystallizedcaches { background-position: -384px 0; }
-.clt_divemaster { background-position: -416px 0; }
-.clt_donationdrive { background-position: -448px 0; }
-.clt_exaltedchests { background-position: -480px 0; }
-.clt_exaltedmasks { background-position: -512px 0; }
-.clt_goldenlostbadges { background-position: -544px 0; }
-.clt_herochallenge { background-position: -576px 0; }
-.clt_historybuff { background-position: -608px 0; }
-.clt_hungrycats { background-position: -640px 0; }
-.clt_iceboundchests { background-position: -672px 0; }
-.clt_itzeltotems { background-position: -704px 0; }
-.clt_lionsarchexterminator { background-position: -736px 0; }
-.clt_lostbadges { background-position: -768px 0; }
-.clt_masteryinsight { background-position: -800px 0; }
-.clt_matrixcubekey { background-position: -832px 0; }
-.clt_mursaattablets { background-position: -864px 0; }
-.clt_mursaattokens { background-position: -896px 0; }
-.clt_noxiouspods { background-position: -928px 0; }
-.clt_paperscraps { background-position: -960px 0; }
-.clt_prioryseals { background-position: -992px 0; }
-.clt_pumpkincarving { background-position: -1024px 0; }
-.clt_rangerpets { background-position: -1056px 0; }
-.clt_skrittburglar { background-position: -1088px 0; }
-.clt_skrittstashes { background-position: -1120px 0; }
-.clt_speedyreader { background-position: -1152px 0; }
-.clt_strongboxes { background-position: -1184px 0; }
-.clt_thoroughsampling { background-position: -1216px 0; }
-.clt_tigerspirit { background-position: -1248px 0; }
 
 .mapNeedle0, .mapNeedle1, .mapNeedle2 {
 	border-radius: 50%;
