--- a/style/account.css
+++ b/style/account.css
@@ -73,6 +73,18 @@
 	color: #aaff55;
 }
 
+.accEmbedContainer {
+	text-align: center;
+}
+.accEmbedFrame {
+	display: inline-block;
+	width: 720px;
+	height: 480px;
+	border: 4px solid rgba(0,0,0,0.6);
+	border-radius: 8px;
+	box-shadow: 0px 0px 32px #0b0d0e;
+}
+
 /* Menu
 ----------------------------------------------------------------------------- */
 #accOverhead {
@@ -1975,6 +1987,17 @@ input[type="text"].bnkCatalogSlotAdd, input[type="text"].bnkCatalogTabRename {
 .bnkRarity .bnkSlotRarity_Exotic { border-image: linear-gradient(to bottom, #ffaa00 0%, rgba(255, 170, 0, 0.2) 100%); border-image-slice: 1; background-repeat: repeat; }
 .bnkRarity .bnkSlotRarity_Ascended { border-image: linear-gradient(to bottom, #ff4488 0%, rgba(255, 68, 136, 0.2) 100%); border-image-slice: 1; background-repeat: repeat; }
 .bnkRarity .bnkSlotRarity_Legendary { border-image: linear-gradient(to bottom, #9933ff 0%, rgba(153, 51, 255, 0.2) 100%); border-image-slice: 1; background-repeat: repeat; }
+.bnkSlotLabel {
+	display: block;
+	position: absolute;
+	top: 14px;
+	left: 8px;
+	font-family: Trebuchet MS, Menomonia;
+	font-size: 14px;
+	color: white;
+	text-shadow:
+		1px 1px 1px #000;
+}
 .bnkSlotCount {
 	display: block;
 	position: absolute;
@@ -1993,6 +2016,11 @@ input[type="text"].bnkCatalogSlotAdd, input[type="text"].bnkCatalogTabRename {
 	top: 10px;
 	right: 7px;
 	font-size: 13px;
+}
+.bnkCondense .bnkSlotLabel {
+	top: 10px;
+	left: 6px;
+	font-size: 12px;
 }
 .bnkSlotPrice, .bnkSlotPriceBuy, .bnkSlotPriceSell {
 	display: block;
