--- a/style/account.css
+++ b/style/account.css
@@ -80,6 +80,8 @@
 	display: inline-block;
 	width: 720px;
 	height: 480px;
+	padding: 8px;
+	background: linear-gradient(to right, #4a3018 0%, #775334 50%, rgba(119,83,52,0.2) 100%);
 	border: 4px solid rgba(0,0,0,0.6);
 	border-radius: 8px;
 	box-shadow: 0px 0px 32px #0b0d0e;
@@ -1994,9 +1996,8 @@ input[type="text"].bnkCatalogSlotAdd, input[type="text"].bnkCatalogTabRename {
 	left: 8px;
 	font-family: Trebuchet MS, Menomonia;
 	font-size: 14px;
-	color: white;
-	text-shadow:
-		1px 1px 1px #000;
+	color: #ffeebb;
+	text-shadow: 1px 1px 1px #000;
 }
 .bnkSlotCount {
 	display: block;
@@ -2006,8 +2007,7 @@ input[type="text"].bnkCatalogSlotAdd, input[type="text"].bnkCatalogTabRename {
 	font-family: Trebuchet MS, Menomonia;
 	font-size: 18px;
 	color: #ffeeaa;
-	text-shadow:
-		1px 1px 1px #000;
+	text-shadow: 1px 1px 1px #000;
 }
 .bnkSlotCountMax {
 	color: #ff2200;
