--- a/style/tile.css
+++ b/style/tile.css
@@ -18,6 +18,20 @@ html, body {
 	display: none;
 }
 
+#dsbContainerOuter {
+	width: 100%;
+	text-align: center;
+}
+#itemDashboard {
+	display: inline-block !important;
+	position: relative;
+	margin-top: -16px;
+	margin-bottom: 64px;
+	padding: 8px 12px 4px 12px;
+	text-align: left;
+	line-height: normal;
+}
+
 #itemTimeline {
 	position: relative;
 	bottom: auto;
